# project-builder

./: .gitignore
builder/: CLAUDE.md  RECOMMENDATIONS.md  pyproject.toml  requirements.txt  run.py
builder/mcp_server/: __init__.py  feature_mcp.py
builder/phase2/: .env.example  README.md  app_spec.txt  claude-progress.txt  feature_list.json  init.sh  requirements.txt
builder/phase2/.claude/: .ralph-loop.local.md  ralph-loop.local.md  settings.local.json
builder/phase2/prompts/: analyzer_prompt.md  bug_triage_prompt.md  initializer_prompt.md  prd_generator_prompt.md  spec_creator_prompt.md
builder/phase2/schemas/: bug_report.schema.json  prd.schema.json  project_profile.schema.json
builder/phase2/scripts/: ralph-once.sh
builder/phase2/src/: __init__.py  agent.py  analyzer.py  bug_triage.py  cli.py  feature_splitter.py  prd.py  request_router.py  spec_creator.py
builder/phase3/: GENERAL_IMPROVEMENTS.md  PROCESS_IMPROVEMENTS.md  USER_GUIDE.md  feature_list.json
builder/phase3/.claude/: ralph-loop.local.md
builder/phase3/flowchart/: index.html  package.json
builder/phase3/prompts/: coding_prompt.md  initializer_prompt.md
builder/phase3/schemas/: project_profile.schema.json
builder/phase3/src/: __init__.py  feature_validator.py  knowledge.py  learnings.py  progress.py  splitter_integration.py  story_sizing.py
builder/phase3/tests/: __init__.py  (+6 more)
builder/prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md  ralph_prompt.md
builder/src/: __init__.py  agent.py  cli.py  client.py  features.py  progress.py  prompts.py  ralph.py  security.py
(+20 files in other folders)
